Error Page, Question Page  and Login Done

--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -1,15 +1,17 @@
 {% extends "layouts/base.html" %}
 {% block main %}
 <main>
-    <div class="container login-container">
-        <h1>{{_("პაროლის აღდგენა")}}</h1>
+    <div class="container reset-container">
+        <h1  id="recovery">{{_("პაროლის აღდგენა")}}</h1>
         <form class="authorize" method="post">
             <div>
-                <label for="umail">{{_("მიუთითეთ ელფოსტა")}}</label>
+                <label id="email" for="umail">{{_("მიუთითეთ ელფოსტა")}}</label>
                 <input type="email" name="umail" required>
             </div>
             <div class="login-btn">
-                <button type="submit">{{_("აღდგენა")}}</button>
+                <button type="submit">
+                    <a id="recbtn">{{_("აღდგენა")}}</a>
+                </button>
             </div>
         </form>
     </div>
