--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ami gurumi Tbilisi</title>
+    <title>{% block title %}Ami gurumi Tbilisi{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <meta name="description"
@@ -120,5 +120,6 @@
     </footer>
     <script src="{{ url_for('static', filename='js/modal.js') }}"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+
 </body>
 </html>
