--- a/app/templates/main/questions.html
+++ b/app/templates/main/questions.html
@@ -1,4 +1,42 @@
 {% extends "layouts/base.html" %}
 
 {% block main %}
+<main>
+        <div class="container">
+            <h1 id="faq">{{_('ხშირად დასმული კითხვები')}}</h1>
+            <details>
+                <summary id="q1">{{_('სად ხართ ტერიტორიულად?')}}</summary>
+                <p id="answer1">{{_('ამჟამად ჩვენი მაღაზია მხოლოდ ონლაინ მუშაობს. სათამაშოებს თბილისში, სახლში ვამზადებთ და სასურველ ლოკაციებზე მიტანის სერვისით ვგზავნით.')}}</p>
+            </details>
+            <details>
+                <summary id="q2">{{_('რა მასალისაგან მზადდება სათამაშოები?')}}</summary>
+                <p id="answer2">{{_('სათამაშოებს ვამზადებთ ანტიალერგიული პლუშის ძაფებისაგან, ძირითადად Himalaya-ს ფირმის, რომელიც ერთ-ერთ ყველაზე ხარისხიან ძაფად მიიჩნევა. აღნიშნული ძაფები უსაფრთხოა თქვენი პატარებისათვის.')}}</p>
+            </details>
+            <details>
+                <summary id="q3">{{_('როგორ შევუკვეთო სათამაშო?')}}</summary>
+                <p id="answer3">{{_('შეკვეთის გასაფორმებლად შეგიძლიათ ჩვენი ვებგვერდი გამოიყენოთ. შეარჩიეთ სასურველი სათამაშო და დააჭირეთ ღილაკს შეძენა, შემდეგ კი გააფორმეთ შეკვეთა. ასევე შეგიძლიათ მოგვწეროთ ჩვენს ინსტაგრამზე ან ფეისბუქ გვერდზე.')}}</p>
+            </details>
+            <details>
+                <summary id="q4">{{_('რა დრო დასჭირდება სათამაშოს დამზადებას?')}}</summary>
+                <p id="answer4">{{_('როგორც წესი, სათამაშოს დამზადებას 2-დან 5 დღემდე ვანდომებთ. თუმცა ზოგიერთი სათამაშო შესაძლოა თქვენ მიერ შეკვეთის გაფორმების მომენტში უკვე მარაგში იყოს და შესაბამისად ეს დრო არ დასჭირდეს.')}}</p>
+            </details>
+            <details>
+                <summary id="q5">{{_('როგორ მუშაობს მიტანის სერვისი?')}}</summary>
+                <p id="answer5">{{_('შეკვეთის ვებგვერდზე გაფორმებისას შეგიძლიათ აირჩიოთ სასურველი მიტანის თარიღი მოცემული ვარიანტებიდან. საქმე იმაშია, რომ თითოეული სათამაშოს დამზადებას გარკვეული დრო სჭირდება. ეს დრო განსხვავებულია სათამაშოს ზომისა და სირთულის მიხედვით, საშუალოდ 2-5 დღე. როგორც კი სათამაშო დამზადდება, მიტანის სერვისი თბილისში მეორე დღესვე მოგიტანთ შეკვეთას. რეგიონებში კი საქართველოს ფოსტით ვგზავნით და ამ შემთხვევაში მოტანის შესაძლოა დაახლოებით 1 კვირა დასჭირდეს. თუკი რეგიონში გნებავთ, გთხოვთ წინასწარ დაგვეკონტაქტეთ ჩვენს ფეისბუქ ან ინსტაგრამ გვერდზე, რათა უფრო დეტალურად შეგატყობინოთ მოტანის ვადა.')}}</p>
+            </details>
+            <details>
+                <summary id="q6">{{_('როგორ გადავიხადო შეკვეთის ღირებულება?')}}</summary>
+                <p id="answer6">{{_('შეკვეთის თანხის გადახდა, ვებგვერდზე შეკვეთის განთავსებისას, ვიზა ან მასტერქარდის საბანკო ბარათით არის შესაძლებელი. ასევე შეგიძლიათ გადმორიცხოთ ჩვენს თიბისი ან საქართველოს ბანკის ანგარიშზე, რა შემთხვევაშიც გთხოვთ დანიშნულებაში მიუთითეთ შეკვეთის ნომერი.')}}</p>
+            </details>
+            <details>
+                <summary id="q7">{{_('თანხის ხელზე გადახდა შესაძლებელია?')}}</summary>
+                <p id="answer7">{{_('ამ ეტაპზე, სამწუხაროდ, საკუთარი კურიერი არ გვყავს, მიტანის სერვისს სხვა კომპანია უზრუნველყოფს, ამიტომ სათამაშოს თანხის ხელზე გადახდა შესაძლებელი არ არის. თუმცა შეგიძლიათ მიტანის სერვისის თანხა გადაუხადოთ ხელზე კურიერს, თუკი ასე გირჩევნიათ.')}}</p>
+            </details>
+            <details>
+                <summary id="q8">{{_('ინდივიდუალურ შეკვეთებს იღებთ?')}}</summary>
+                <p id="answer8">{{_('ინდივიდუალური სათამაშოს შეკვეთა შესაძლებელია, იმ შემთხვევაში, თუკი შევძლებთ თქვენი სასურველი სათამაშოს სქემის მოპოვებას ან შექმნას. გთხოვთ წინასწარ, სასურველ თარიღამდე სულ მცირე 10 დღით ადრე დაგვიკავშირდეთ ჩვენს ინსტაგრამ ან ფეისბუქ გვერდზე და გვაჩვენოთ სასურველი სათამაშო, რა შემთხვევაშიც დაგიზუსტებთ რამდენად შეგვიძლია მისი მოქსოვა.')}}</p>
+            </details>
+
+        </div>
+    </main>
 {% endblock %}
