--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -427,7 +427,7 @@ footer a {
     row-gap: 50px;
 }
 
-.container h1 {
+.container h1, .error-container h1 {
     font-family: var(--main-font-ge);
     color: var(--text-color);
     font-weight: 900;
@@ -708,6 +708,10 @@ footer a {
     padding: 10% 0 12%;
 }
 
+.reset-container {
+    padding: 12% 0 15%;
+}
+
 .authorize {
     width: 100%;
     padding: 1rem 0;
@@ -766,6 +770,97 @@ footer a {
     padding: 0 0.5rem;
     align-self: center;
 }
+
+.error-container {
+    margin: 16% 25%;
+}
+
+.error-container h1 {
+    margin-bottom: 2rem;
+}
+
+.error-container div {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+.error-container span {
+    font-family: var(--main-font-ge);
+    font-size: var(--size-20);
+    color: var(--text-color);
+}
+
+.error-container a {
+    font-family: var(--main-font-ge);
+    font-size: var(--size-18);
+}
+
+.password-field {
+    position: relative;
+}
+
+#toggler, #toggler2 {
+    height: 18px;
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    top: 48%;
+    }
+
+details {
+    margin: 2rem 0;
+    border: 2px solid var(--background-color);
+    transition: 0.2s linear;
+}
+
+details:hover {
+    box-shadow: 10px 10px 10px #D3D3D3;
+    transition: 0.2s linear;
+}
+
+summary, details p {
+    font-family: var(--main-font-ge);
+    font-size: var(--size-20);
+    color: var(--text-color);
+    padding: 2rem;
+}
+
+details p {
+    text-align: justify;
+}
+
+button a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.result-container {
+    padding: 12% 5rem;
+}
+
+.result-container h1 {
+    color: green;
+    margin-bottom: 2rem;
+}
+
+.result-container span, .negative-result-container span {
+    font-family: var(--main-font-ge);
+    font-size: var(--size-18);
+    color: var(--text-color);
+}
+
+.negative-result-container h1 {
+    color: red;
+}
+
+.negative-result-container span {
+    margin: 1rem 0;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
 
 @media (max-width: 1192px) {
     .pages {
@@ -851,6 +946,15 @@ footer a {
     .container, .header-container, .main-container, footer nav {
         padding: 1rem 2rem;
     }
+    .login-container {
+        padding: 10% 2rem;
+    }
+    .reset-container {
+        padding: 15% 2rem;
+    }
+    .result-container {
+        padding: 12% 2rem;
+    }
     .nav-links.nav-links__active {
         display: flex;
         flex-direction: column;
@@ -935,6 +1039,9 @@ footer a {
     }
     footer a {
         font-size: calc(var(--size-18)*0.8);
+    }
+    .reset-container {
+        padding: 20% 2rem;
     }
 }
 
@@ -1024,6 +1131,18 @@ footer a {
     .login-btn button {
         min-width: 135px;
     }
+    .error-container {
+        margin: 18% 25%;
+    }
+    #toggler, #toggler2 {
+        top: 46%;
+        }
+    .reset-container {
+            padding: 25% 2rem;
+        }
+    .result-container span, .negative-result-container span {
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 465px) {
@@ -1070,6 +1189,26 @@ footer a {
     .terms {
         max-width: 55px;
     }
+    .error-container {
+        margin: 20% 25%;
+    }
+    .login-container {
+        padding: 15% 2rem;
+    }
+    footer nav {
+        padding: 0.5rem 2rem ;
+    }
+    .reset-container {
+        padding: 30% 2rem;
+    }
+    details {
+        margin: 1rem 0;
+    }
+    summary, details p {
+        font-size: calc(var(--size-18)*0.8);
+        padding: 1rem;
+    }
+
 }
 
 @media (max-width: 350px) {
@@ -1092,5 +1231,8 @@ footer a {
     }
     .cart-products {
         gap: 2%;
+    }
+    .reset-container {
+        padding: 38% 2rem;
     }
 }
