--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -641,6 +641,69 @@ footer a {
     display: flex;
     justify-content: space-between;
 }
+.added-products-list
+{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    
+}
+.added-products-list 
+.added-product
+{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1.5rem;
+    background-color: var(--background-color);
+    border: 1px solid var(--text-color);
+    border-radius: 0.5rem;
+    width: 100%;
+    cursor: pointer;
+}
+.added-product
+img 
+{
+    max-width: 80px;
+    height: 80px;
+    border-radius: 0.5rem;
+}
+
+.added-product
+span
+{
+    font-size: var(--size-24);
+    font-weight: 600;
+    color: var(--text-color);
+}
+
+.added-product:hover
+.delete-product
+{
+    display: flex;
+    backdrop-filter: blur(5px);
+}
+.added-product
+.delete-product
+{
+    position: absolute;
+    display: none;
+    align-items: flex-start;
+    justify-content: center;
+    inset: 0;
+    background-color: rgba(213, 174, 169, 0.7);
+    backdrop-filter: blur(5px);
+    border-radius: 0.6rem;
+}
+.delete-product
+img
+{
+    max-width: 55px;
+    width: 100%;
+    height: 55px;
+    transform: translateY(-15%);
+}
 
   .close {
     color: var(--text-color);
